css/standard.css
/* ... */
/* the header, footer, etc */
header {
  background-color: #fff;
  text-align:       center;
  padding-top: 1.5em;
  margin: 0em 3em;
  border-bottom:    3px solid gray;
}

.lastlogin {
  position:absolute;
  top:0;
  left:3em;
}
.lastlogin span { font-size:smaller;}

.main {
  background-color: #fff;
  padding: 0em 0em;
  margin:  0em 3em;
  padding-bottom: 1em;
}

footer {
  background-color: #fff;
  margin: 0em 3em;
  padding:0em 0.2em;
  border-top: 2px solid gray;
}
footer .right { text-align:right;   font-size:smaller;}
footer .left  { float:left;         font-size:smaller;}

.status {
  position:absolute;
  right:4em;
  top:0.1em;
  font-size: smaller;
}

/* sessions */
.session {
  border-bottom: 1px solid #000;
  padding: 0.5em;
  text-align: center;
}
.session div.sessionrules {
  width: 19em;
  float: left;
  text-align: left;
}
.session div.sessionrules div{
  display:none;
  background-color: #fff;
  border: 1px solid #000;
  position:absolute;
  z-index: 30;
  padding:0.5em;
}
.session div.sessionrules:hover div{ display:block; }
.session div.sessionscore {
  width: 19em;
  float: right;
  text-align: right;
}
.session div.sessionscore div{
  position:absolute;
  width:12em;
  right:3em;
  display:none;
  background-color: #fff;
  border: 1px solid #000;
  z-index: 30;
}
.session div.sessionscore:hover div{ display:block;}
.session img.rulesicon{ height: 1em; }

.session .scoretable{
  height:20em;
  overflow: auto;
}
.session table.score {
  margin:0.5em;
  width:10em;
  border-collapse:collapse;
}

/* all kind of message that should appear in the middle of the page/table */
.message {
 position: absolute;
 background-color: #fff;
 width: 20%;
 top:19em;
 left:40%;
 right:40%;
 text-align: center;
 z-index:33;
}
.message >div { border: 2px solid black; }
.message div div {
    width: 100%;
    text-align: right;
    font-size: smaller;
}

.joingame,.sickness,.poverty,.total {
 position: absolute;
 background-color: #fff;
 width: 20%;
 top:19em;
 left:40%;
 right:40%;
 text-align: center;
 z-index:22;
}
.total {
    top:11em;
    width: 14%;
    left: 43%;
}
/* scoring */
.total .re {
 position: absolute;
 left: -12em;
 top:8em;
 background-color: #eee;
 z-index:15;
}
.total .contra {
 position: absolute;
 right: -14em;
 top:8em;
 background-color: #eee;
 z-index:15;
}

/* playing cards*/
.card {
  position:absolute;
  z-index:20;
  top:18em;
  left:28em;
  text-align:center;
  background-color:#fff;
  border:2px solid gray;
}
.card img { width:8em; }

form {  position: relative;}

/* display the table and the names */
div.table {
  position:relative;
  text-align:center;
  margin: 0;
  padding:0;
  border-bottom:1px solid #444;
}

div.table div.table1 {
  width:10.5%;
  min-width: 10em;
  text-align:center;
  z-index:20;
  margin: 0 auto;
}
div.middle {
    position:relative;
    min-height: 6em;
}
div.table div.table0 {
  position:absolute;
  width:10.5%;
  min-width: 10em;
  min-height: 4em;
  top:20%;
  right: 64.5%;
  text-align:center;
  z-index:20;
}
div.table img.table {
  width:25%;
  z-index:5;
  margin:  0 auto;
  min-margin-left: 10xem;
  min-margin-right: 10em;
  min-height: 6em;
  display: block;
  vertical-align:middle;
}
div.table div.table2 {
  position:absolute;
  width:10.5%;
  min-width: 10em;
  min-height: 4em;
  top:20%;
  left:64.5%;
  text-align:center;
  z-index:20;
}
div.table div.table3 {
  width:10.5%;
  min-width: 10em;
  text-align:center;
  z-index:20;
  margin: 0 auto;
}

img.gravatar  {
    width:  4em;
    height: 4em;
    border: 3px solid #aaa;
}

div img.button {
    width: 2em;
}

div span.numberoftricks {
    text-align:center;
}

/* display the card tricks */

ul.tricks {
  text-align:center;
  list-style:none;
  margin:0px;
  padding:3px;
  padding-bottom:3px;
  border-bottom:1px solid #444;
}
ul.tricks a { text-decoration:none; color:#000;}
ul.tricks li {
  /*background-color:blue;*/
  padding:0.1em;
  margin:0.2em 0.5em;
  display:inline;
}
ul.tricks li.old {  background-color:#fff; }
ul.tricks li a:hover {  background-color: #bbb;}
ul.tricks li.nohighlight a:hover {  background-color: #fff;}

div.tricks {
  position: absolute;
  top: 0;
  left: 0;
  right:0;
  bottom: 0;
  text-align:center;
  margin: 0;
  padding:0 0;
}

div.tricks div.trick {
  position: absolute;
  top: 0%;
  left: 0;
  right:0;
  bottom: 0%;
  display:none;
}
.tricks div.trick img.arrow {
  position:relative;
  display:inline;
  text-align:center;
  height: 60%;
  top: 20%;
  z-index:8;
}

#trick0 img { float:left; width: 3em; }

hr {clear:both;}

/* left player */
.tricks div div.card0 img,
.tricks div div.card0 .score,
.vorbehalt0 {
  position:absolute;
  margin:0;
  padding:0;
 /*border: 1px solid red;*/
  top: 30%;
  left:37.5%;
  right:56.5%;
  height:40%;
  z-index:30;
}

.vorbehalt0 {
  left:37.5%;
  right:57.5%;
  width:10%;
  text-align:left;
}
.tricks div div.card0 span.comment{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 5%;
  right:66.5%;
  left:17.5%;
  width:16%;
}

/* top player */
.tricks div div.card1 img,
.tricks div div.card1 .score,
.vorbehalt1 {
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 0%;
  left:47%;
  right:47%;
  height:40%;
  text-align:center;
  z-index:30;
}
.vorbehalt1{
  left:45%;
  right:45%;
  width:10%;
  z-index:30;
}
.tricks div div.card1 span.comment{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 5%;
  left:66.5%;
  right:17.5%;
  width:16%;
  text-align:center;
}

/* right player */
.tricks div div.card2 img,
.tricks div div.card2 .score,
.vorbehalt2{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 30%;
  right:37.5%;
  left:56.5%;
  height:40%;
  z-index:30;
}
.vorbehalt2{
  left:auto;
  right:38%;
  width:10%;
  text-align:right;
}
/* ... */

